ext/hpricot_scan/hpricot_css.c

#line 1 "hpricot_css.rl"
/*
 * hpricot_css.rl
 * ragel -C hpricot_css.rl -o hpricot_css.c
 *
 * Copyright (C) 2008 why the lucky stiff
 */
#include <ruby.h>

#define FILTER(id) \
  rb_funcall2(mod, rb_intern("" # id), fargs, fvals); \
  rb_ary_clear(tmpt); \
  fargs = 1
#define FILTERAUTO() \
  char filt[10]; \
  sprintf(filt, "%.*s", te - ts, ts); \
  rb_funcall2(mod, rb_intern(filt), fargs, fvals); \
  rb_ary_clear(tmpt); \
  fargs = 1
#ifdef HAVE_RUBY_ENCODING_H
#define STRNEW(a, len)  rb_external_str_new((a), (len))
#else
#define STRNEW(a, len)  rb_str_new((a), (len))
#endif
#define PUSH(aps, ape) rb_ary_push(tmpt, fvals[fargs++] = STRNEW(aps, ape - aps))
#define P(id) printf(id ": %.*s\n", te - ts, ts);


#line 31 "hpricot_css.c"
static const int hpricot_css_start = 87;
static const int hpricot_css_error = 0;

static const int hpricot_css_en_main = 87;


#line 92 "hpricot_css.rl"


VALUE hpricot_css(VALUE self, VALUE mod, VALUE str, VALUE node)
{
  int cs, act, eof;
  char *p, *pe, *ts, *te, *aps, *ape, *aps2, *ape2;

  int fargs = 1;
  VALUE fvals[6];
  VALUE focus = rb_ary_new3(1, node);
  VALUE tmpt = rb_ary_new();
  rb_gc_register_address(&focus);
  rb_gc_register_address(&tmpt);
  fvals[0] = focus;

  if (TYPE(str) != T_STRING)
    rb_raise(rb_eArgError, "bad CSS selector, String only please.");

  StringValue(str);
  p = RSTRING_PTR(str);
  pe = p + RSTRING_LEN(str);


#line 62 "hpricot_css.c"
	{
	cs = hpricot_css_start;
	ts = 0;
	te = 0;
	act = 0;
	}

#line 115 "hpricot_css.rl"

#line 72 "hpricot_css.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
tr0:
#line 1 "NONE"
	{	switch( act ) {
	case 0:
	{{goto st0;}}
	break;
	case 1:
	{{p = ((te))-1;} FILTER(ID); }
	break;
	case 2:
	{{p = ((te))-1;} FILTER(CLASS); }
	break;
	case 5:
	{{p = ((te))-1;} FILTER(TAG); }
	break;
	case 7:
	{{p = ((te))-1;} FILTER(CHILD); }
	break;
	case 8:
	{{p = ((te))-1;} FILTER(POS); }
	break;
	case 9:
	{{p = ((te))-1;} FILTER(PSUEDO); }
	break;
	}
	}
	goto st87;
tr4:
#line 88 "hpricot_css.rl"
	{{p = ((te))-1;}}
	goto st87;
tr41:
#line 85 "hpricot_css.rl"
	{{p = ((te))-1;}{ FILTER(PSUEDO); }}
	goto st87;
tr46:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
#line 85 "hpricot_css.rl"
	{te = p+1;{ FILTER(PSUEDO); }}
	goto st87;
tr48:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
#line 85 "hpricot_css.rl"
	{te = p+1;{ FILTER(PSUEDO); }}
	goto st87;
tr62:
#line 84 "hpricot_css.rl"
	{{p = ((te))-1;}{ FILTER(POS); }}
	goto st87;
tr64:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
#line 84 "hpricot_css.rl"
	{te = p+1;{ FILTER(POS); }}
	goto st87;
tr66:
#line 83 "hpricot_css.rl"
	{{p = ((te))-1;}{ FILTER(CHILD); }}
	goto st87;
tr67:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
#line 83 "hpricot_css.rl"
	{te = p+1;{ FILTER(CHILD); }}
	goto st87;
tr71:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
#line 83 "hpricot_css.rl"
	{te = p+1;{ FILTER(CHILD); }}
	goto st87;
tr100:
#line 80 "hpricot_css.rl"
	{te = p+1;{ FILTER(ATTR); }}
	goto st87;
tr105:
#line 80 "hpricot_css.rl"
	{{p = ((te))-1;}{ FILTER(ATTR); }}
	goto st87;
tr132:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
#line 79 "hpricot_css.rl"
	{te = p+1;{ FILTER(NAME); }}
	goto st87;
tr143:
#line 87 "hpricot_css.rl"
	{te = p+1;{ FILTERAUTO(); }}
	goto st87;
tr149:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
#line 81 "hpricot_css.rl"
	{te = p;p--;{ FILTER(TAG); }}
	goto st87;
tr153:
#line 88 "hpricot_css.rl"
	{te = p;p--;}
	goto st87;
tr154:
#line 86 "hpricot_css.rl"
	{te = p;p--;{ focus = rb_ary_new3(1, node); }}
	goto st87;
tr155:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
#line 77 "hpricot_css.rl"
	{te = p;p--;{ FILTER(ID); }}
	goto st87;
tr159:
#line 82 "hpricot_css.rl"
	{te = p;p--;{ FILTER(MOD); }}
	goto st87;
tr162:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
#line 78 "hpricot_css.rl"
	{te = p;p--;{ FILTER(CLASS); }}
	goto st87;
tr166:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
#line 85 "hpricot_css.rl"
	{te = p;p--;{ FILTER(PSUEDO); }}
	goto st87;
tr173:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
#line 84 "hpricot_css.rl"
	{te = p;p--;{ FILTER(POS); }}
	goto st87;
tr192:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
#line 83 "hpricot_css.rl"
	{te = p;p--;{ FILTER(CHILD); }}
	goto st87;
tr200:
#line 80 "hpricot_css.rl"
	{te = p;p--;{ FILTER(ATTR); }}
	goto st87;
st87:
#line 1 "NONE"
	{ts = 0;}
#line 1 "NONE"
	{act = 0;}
	if ( ++p == pe )
		goto _test_eof87;
case 87:
#line 1 "NONE"
	{ts = p;}
#line 275 "hpricot_css.c"
	switch( (*p) ) {
		case -60: goto tr133;
		case 32: goto tr137;
		case 35: goto st7;
		case 43: goto st92;
		case 44: goto st90;
		case 45: goto tr140;
		case 46: goto st13;
		case 58: goto st19;
		case 62: goto tr143;
		case 91: goto st52;
		case 92: goto tr146;
		case 95: goto tr144;
		case 101: goto tr147;
		case 110: goto tr140;
		case 111: goto tr148;
		case 126: goto tr143;
	}
	if ( (*p) < 9 ) {
		if ( (*p) < -32 ) {
			if ( -59 <= (*p) && (*p) <= -33 )
				goto tr134;
		} else if ( (*p) > -17 ) {
			if ( -16 <= (*p) && (*p) <= -12 )
				goto tr136;
		} else
			goto tr135;
	} else if ( (*p) > 13 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr140;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr144;
		} else
			goto tr144;
	} else
		goto tr137;
	goto st0;
st0:
cs = 0;
	goto _out;
tr133:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 328 "hpricot_css.c"
	if ( -88 <= (*p) && (*p) <= -65 )
		goto tr1;
	goto tr0;
tr1:
#line 1 "NONE"
	{te = p+1;}
#line 81 "hpricot_css.rl"
	{act = 5;}
	goto st88;
tr144:
#line 1 "NONE"
	{te = p+1;}
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
#line 81 "hpricot_css.rl"
	{act = 5;}
	goto st88;
st88:
	if ( ++p == pe )
		goto _test_eof88;
case 88:
#line 352 "hpricot_css.c"
	switch( (*p) ) {
		case -60: goto st1;
		case 45: goto tr1;
		case 92: goto st5;
		case 95: goto tr1;
	}
	if ( (*p) < -16 ) {
		if ( (*p) > -33 ) {
			if ( -32 <= (*p) && (*p) <= -17 )
				goto st3;
		} else if ( (*p) >= -59 )
			goto st2;
	} else if ( (*p) > -12 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr1;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr1;
		} else
			goto tr1;
	} else
		goto st4;
	goto tr149;
tr134:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 387 "hpricot_css.c"
	if ( (*p) <= -65 )
		goto tr1;
	goto tr0;
tr135:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 401 "hpricot_css.c"
	if ( (*p) <= -65 )
		goto st2;
	goto tr0;
tr136:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 415 "hpricot_css.c"
	if ( (*p) <= -65 )
		goto st3;
	goto tr0;
tr146:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 429 "hpricot_css.c"
	if ( (*p) == 46 )
		goto tr1;
	goto tr0;
tr137:
#line 1 "NONE"
	{te = p+1;}
	goto st89;
st89:
	if ( ++p == pe )
		goto _test_eof89;
case 89:
#line 441 "hpricot_css.c"
	switch( (*p) ) {
		case 32: goto st6;
		case 44: goto st90;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st6;
	goto tr153;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	switch( (*p) ) {
		case 32: goto st6;
		case 44: goto st90;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st6;
	goto tr4;
st90:
	if ( ++p == pe )
		goto _test_eof90;
case 90:
	if ( (*p) == 32 )
		goto st90;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto st90;
	goto tr154;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	switch( (*p) ) {
		case -60: goto tr7;
		case 45: goto tr12;
		case 92: goto tr13;
		case 95: goto tr12;
	}
	if ( (*p) < -16 ) {
		if ( (*p) > -33 ) {
			if ( -32 <= (*p) && (*p) <= -17 )
				goto tr10;
		} else if ( (*p) >= -59 )
			goto tr9;
	} else if ( (*p) > -12 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr12;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr12;
		} else
			goto tr12;
	} else
		goto tr11;
	goto st0;
tr7:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 507 "hpricot_css.c"
	if ( -88 <= (*p) && (*p) <= -65 )
		goto tr14;
	goto tr0;
tr12:
#line 1 "NONE"
	{te = p+1;}
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
#line 77 "hpricot_css.rl"
	{act = 1;}
	goto st91;
tr14:
#line 1 "NONE"
	{te = p+1;}
#line 77 "hpricot_css.rl"
	{act = 1;}
	goto st91;
st91:
	if ( ++p == pe )
		goto _test_eof91;
case 91:
#line 531 "hpricot_css.c"
	switch( (*p) ) {
		case -60: goto st8;
		case 45: goto tr14;
		case 92: goto st12;
		case 95: goto tr14;
	}
	if ( (*p) < -16 ) {
		if ( (*p) > -33 ) {
			if ( -32 <= (*p) && (*p) <= -17 )
				goto st10;
		} else if ( (*p) >= -59 )
			goto st9;
	} else if ( (*p) > -12 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr14;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr14;
		} else
			goto tr14;
	} else
		goto st11;
	goto tr155;
tr9:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 566 "hpricot_css.c"
	if ( (*p) <= -65 )
		goto tr14;
	goto tr0;
tr10:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 580 "hpricot_css.c"
	if ( (*p) <= -65 )
		goto st9;
	goto tr0;
tr11:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
#line 594 "hpricot_css.c"
	if ( (*p) <= -65 )
		goto st10;
	goto tr0;
tr13:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 608 "hpricot_css.c"
	if ( (*p) == 46 )
		goto tr14;
	goto tr0;
tr160:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
	goto st92;
st92:
	if ( ++p == pe )
		goto _test_eof92;
case 92:
#line 623 "hpricot_css.c"
	switch( (*p) ) {
		case 43: goto st92;
		case 45: goto st92;
		case 110: goto st92;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st92;
	goto tr159;
tr161:
#line 1 "NONE"
	{te = p+1;}
#line 81 "hpricot_css.rl"
	{act = 5;}
	goto st93;
tr140:
#line 1 "NONE"
	{te = p+1;}
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
#line 81 "hpricot_css.rl"
	{act = 5;}
	goto st93;
st93:
	if ( ++p == pe )
		goto _test_eof93;
case 93:
#line 652 "hpricot_css.c"
	switch( (*p) ) {
		case -60: goto st1;
		case 43: goto tr160;
		case 45: goto tr161;
		case 92: goto st5;
		case 95: goto tr1;
		case 110: goto tr161;
	}
	if ( (*p) < -16 ) {
		if ( (*p) > -33 ) {
			if ( -32 <= (*p) && (*p) <= -17 )
				goto st3;
		} else if ( (*p) >= -59 )
			goto st2;
	} else if ( (*p) > -12 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr161;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr1;
		} else
			goto tr1;
	} else
		goto st4;
	goto tr149;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	switch( (*p) ) {
		case -60: goto tr17;
		case 45: goto tr21;
		case 92: goto tr22;
		case 95: goto tr21;
	}
	if ( (*p) < -16 ) {
		if ( (*p) > -33 ) {
			if ( -32 <= (*p) && (*p) <= -17 )
				goto tr19;
		} else if ( (*p) >= -59 )
			goto tr18;
	} else if ( (*p) > -12 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr21;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr21;
		} else
			goto tr21;
	} else
		goto tr20;
	goto st0;
tr17:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st14;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
#line 717 "hpricot_css.c"
	if ( -88 <= (*p) && (*p) <= -65 )
		goto tr23;
	goto tr0;
tr21:
#line 1 "NONE"
	{te = p+1;}
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
#line 78 "hpricot_css.rl"
	{act = 2;}
	goto st94;
tr23:
#line 1 "NONE"
	{te = p+1;}
#line 78 "hpricot_css.rl"
	{act = 2;}
	goto st94;
st94:
	if ( ++p == pe )
		goto _test_eof94;
case 94:
#line 741 "hpricot_css.c"
	switch( (*p) ) {
		case -60: goto st14;
		case 45: goto tr23;
		case 92: goto st18;
		case 95: goto tr23;
	}
	if ( (*p) < -16 ) {
		if ( (*p) > -33 ) {
			if ( -32 <= (*p) && (*p) <= -17 )
				goto st16;
		} else if ( (*p) >= -59 )
			goto st15;
	} else if ( (*p) > -12 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr23;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr23;
		} else
			goto tr23;
	} else
		goto st17;
	goto tr162;
tr18:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 776 "hpricot_css.c"
	if ( (*p) <= -65 )
		goto tr23;
	goto tr0;
tr19:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st16;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
#line 790 "hpricot_css.c"
	if ( (*p) <= -65 )
		goto st15;
	goto tr0;
tr20:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 804 "hpricot_css.c"
	if ( (*p) <= -65 )
		goto st16;
	goto tr0;
tr22:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 818 "hpricot_css.c"
	if ( (*p) == 46 )
		goto tr23;
	goto tr0;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	switch( (*p) ) {
		case -60: goto tr26;
		case 45: goto tr30;
		case 92: goto tr31;
		case 95: goto tr30;
		case 101: goto tr32;
		case 102: goto tr33;
		case 103: goto tr34;
		case 108: goto tr35;
		case 110: goto tr36;
		case 111: goto tr37;
	}
	if ( (*p) < -16 ) {
		if ( (*p) > -33 ) {
			if ( -32 <= (*p) && (*p) <= -17 )
				goto tr28;
		} else if ( (*p) >= -59 )
			goto tr27;
	} else if ( (*p) > -12 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr30;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr30;
		} else
			goto tr30;
	} else
		goto tr29;
	goto st0;
tr26:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st20;
tr174:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 873 "hpricot_css.c"
	if ( -88 <= (*p) && (*p) <= -65 )
		goto tr38;
	goto tr0;
tr30:
#line 1 "NONE"
	{te = p+1;}
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
#line 85 "hpricot_css.rl"
	{act = 9;}
	goto st95;
tr38:
#line 1 "NONE"
	{te = p+1;}
#line 85 "hpricot_css.rl"
	{act = 9;}
	goto st95;
tr179:
#line 1 "NONE"
	{te = p+1;}
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
#line 85 "hpricot_css.rl"
	{act = 9;}
	goto st95;
st95:
	if ( ++p == pe )
		goto _test_eof95;
case 95:
#line 908 "hpricot_css.c"
	switch( (*p) ) {
		case -60: goto st20;
		case 40: goto tr169;
		case 45: goto tr38;
		case 92: goto st41;
		case 95: goto tr38;
	}
	if ( (*p) < -16 ) {
		if ( (*p) > -33 ) {
			if ( -32 <= (*p) && (*p) <= -17 )
				goto st22;
		} else if ( (*p) >= -59 )
			goto st21;
	} else if ( (*p) > -12 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr38;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr38;
		} else
			goto tr38;
	} else
		goto st23;
	goto tr166;
tr27:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st21;
tr175:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
#line 951 "hpricot_css.c"
	if ( (*p) <= -65 )
		goto tr38;
	goto tr0;
tr28:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st22;
tr176:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 972 "hpricot_css.c"
	if ( (*p) <= -65 )
		goto st21;
	goto tr0;
tr29:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st23;
tr177:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
	goto st23;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
#line 993 "hpricot_css.c"
	if ( (*p) <= -65 )
		goto st22;
	goto tr0;
tr169:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
#line 1008 "hpricot_css.c"
	switch( (*p) ) {
		case 34: goto tr43;
		case 39: goto tr44;
		case 40: goto tr45;
		case 41: goto tr46;
	}
	goto tr42;
tr42:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st25;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
#line 1026 "hpricot_css.c"
	switch( (*p) ) {
		case 34: goto tr0;
		case 40: goto tr0;
		case 41: goto tr48;
	}
	goto st25;
tr43:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st26;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
#line 1043 "hpricot_css.c"
	switch( (*p) ) {
		case 34: goto st28;
		case 40: goto st29;
		case 41: goto tr0;
	}
	goto st27;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	if ( (*p) == 34 )
		goto st28;
	if ( 40 <= (*p) && (*p) <= 41 )
		goto tr0;
	goto st27;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) == 41 )
		goto tr48;
	goto tr0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	if ( (*p) == 41 )
		goto tr0;
	goto st30;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) == 41 )
		goto st31;
	goto st30;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	switch( (*p) ) {
		case 34: goto st28;
		case 40: goto st29;
	}
	goto tr0;
tr44:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st32;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
#line 1099 "hpricot_css.c"
	switch( (*p) ) {
		case 34: goto st34;
		case 39: goto st25;
		case 40: goto st35;
		case 41: goto tr48;
	}
	goto st33;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	switch( (*p) ) {
		case 34: goto st34;
		case 39: goto st25;
		case 40: goto tr0;
		case 41: goto tr48;
	}
	goto st33;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	if ( (*p) == 39 )
		goto st28;
	if ( 40 <= (*p) && (*p) <= 41 )
		goto tr0;
	goto st34;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	if ( (*p) == 41 )
		goto tr0;
	goto st36;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	if ( (*p) == 41 )
		goto st37;
	goto st36;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	switch( (*p) ) {
		case 39: goto st28;
		case 40: goto st35;
	}
	goto tr0;
tr45:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st38;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
#line 1160 "hpricot_css.c"
	if ( (*p) == 41 )
		goto tr0;
	goto st39;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	if ( (*p) == 41 )
		goto st40;
	goto st39;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
	switch( (*p) ) {
		case 40: goto st38;
		case 41: goto tr48;
	}
	goto tr0;
tr31:
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
	goto st41;
tr180:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
	goto st41;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
#line 1197 "hpricot_css.c"
	if ( (*p) == 46 )
		goto tr38;
	goto tr0;
tr32:
#line 1 "NONE"
	{te = p+1;}
#line 30 "hpricot_css.rl"
	{
    aps = p;
  }
#line 85 "hpricot_css.rl"
	{act = 9;}
	goto st96;
st96:
	if ( ++p == pe )
		goto _test_eof96;
case 96:
#line 1215 "hpricot_css.c"
	switch( (*p) ) {
		case -60: goto st20;
		case 40: goto tr169;
		case 45: goto tr38;
		case 92: goto st41;
		case 95: goto tr38;
		case 113: goto tr171;
		case 118: goto tr172;
	}
	if ( (*p) < -16 ) {
		if ( (*p) > -33 ) {
			if ( -32 <= (*p) && (*p) <= -17 )
				goto st22;
		} else if ( (*p) >= -59 )
			goto st21;
	} else if ( (*p) > -12 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr38;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr38;
		} else
			goto tr38;
	} else
		goto st23;
	goto tr166;
tr171:
#line 1 "NONE"
	{te = p+1;}
#line 84 "hpricot_css.rl"
	{act = 8;}
	goto st97;
st97:
	if ( ++p == pe )
		goto _test_eof97;
case 97:
#line 1253 "hpricot_css.c"
	switch( (*p) ) {
		case -60: goto tr174;
		case 40: goto tr178;
		case 45: goto tr179;
		case 92: goto tr180;
		case 95: goto tr179;
	}
	if ( (*p) < -16 ) {
		if ( (*p) > -33 ) {
			if ( -32 <= (*p) && (*p) <= -17 )
				goto tr176;
		} else if ( (*p) >= -59 )
			goto tr175;
	} else if ( (*p) > -12 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr179;
		} else if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr179;
		} else
			goto tr179;
	} else
		goto tr177;
	goto tr173;
tr178:
#line 34 "hpricot_css.rl"
	{
    ape = p;
    PUSH(aps, ape);
  }
	goto st42;
st42:
